simple login auth

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,5 +1,4 @@
-{% extends "main_layout.html"%}
-
+{% extends "main_layout.html" %}
 {% block content %}
-    <p>ini about</p>
+<p>INI ADALAH ABOUT</p>
 {% endblock %}
