--- a/templates/index.html
+++ b/templates/index.html
@@ -25,10 +25,21 @@
         <p>{{haha}}</p>
     </div> -->
 
-</body>
+<!-- </body>
 </html> -->
-
-{% extends "main_layout.html"%}
-    {% block content %}
-    <p>ini index</p>
-    {% endblock %}
+{% extends "main_layout.html" %}
+{% block content %}
+<div>
+    <form action="" method="POST">
+        <div class="form-group">
+          <label for="exampleInputEmail1">Email address</label>
+          <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+        </div>
+        <div class="form-group">
+          <label for="exampleInputPassword1">Password</label>
+          <input type="password" name="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
+</div>
+{% endblock %}
