simple login auth fix

--- a/templates/main_layout.html
+++ b/templates/main_layout.html
@@ -29,12 +29,12 @@
                         <a class="nav-item nav-link" href="{{ url_for('index')}}"><input type="submit"
                                 class="btn btn-outline-info" value="Home"></a>
 
-                        <a class="nav-item nav-link" href="{{ url_for('about') }}"><input type="submit"
+                        <a class="nav-item nav-link" href="{{ url_for('myabout') }}"><input type="submit"
                                 class="btn btn-outline-info" value="About"></a>
 
-                        <a class="nav-item nav-link" href="{{ url_for('contact') }}"><input type="submit"
+                        <a class="nav-item nav-link" href="{{ url_for('mycontact') }}"><input type="submit"
                                 class="btn btn-outline-info" value="Contact"></a>
-                        <a class="nav-item nav-link" href="{{ url_for('logout_akun') }}"><input type="submit"
+                        <a class="nav-item nav-link" href="{{ url_for('mylogout_akun') }}"><input type="submit"
                                     class="btn btn-outline-info" value="Logout"></a>
                     </div>
                 </div>
