--- a/templates/main_layout.html
+++ b/templates/main_layout.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <title>Aplikasiku</title>
+    <title>Coba coba</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
 </head>
 
@@ -15,17 +15,16 @@
     <!-- NAVIGATION BAR -->
     <header class="site-header">
         <nav class="navbar navbar-expand-lg navbar-light bg-dark fixed-top">
-
             <div class="container">
                 <a class="navbar-brand mr-4" href="/">
-                    <font color="white">Aplikasiku</font>
+                    <font color="white">Trying Flask</font>
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle"
                     aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarToggle">
-                    <div class="navbar-nav mr-auto">
+                    <div class="navbar-nav ml-auto">
                         <a class="nav-item nav-link" href="{{ url_for('index')}}"><input type="submit"
                                 class="btn btn-outline-info" value="Home"></a>
 
@@ -57,11 +56,6 @@
 
         </div>
     </main>
-
-
-
-
-
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
     </script>
